TODO: Implement refund API Fixed some errors and optimized code